--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -5,10 +5,19 @@
         <a class="<%= path === '/' ? 'active' : '' %>" href="/">Shop</a>
       </li>
       <li class="main-header__item">
-        <a class="<%= path === '/products' ? 'active' : '' %>" href="/products">Products</a>
+        <a class="<%= path === '/products' ? 'active' : '' %>" href="/products"
+          >Products</a
+        >
       </li>
       <li class="main-header__item">
-        <a class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">My Cart</a>
+        <a class="<%= path === '/cart' ? 'active' : '' %>" href="/cart"
+          >My Cart</a
+        >
+      </li>
+      <li class="main-header__item">
+        <a class="<%= path === '/orders' ? 'active' : '' %>" href="/orders"
+          >My Orders</a
+        >
       </li>
       <li class="main-header__item">
         <a
