--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -1,13 +1,9 @@
-<!-- Responsible for Displaying Orders -->
+<%- include('../includes/head.ejs') %>
+    </head>
 
-<%- include('../includes/head.ejs') %> 
-  </head>
-
-  <body>
-    <%- include('../includes/navigation.ejs') %> 
-    <main>
-        <h1>
-            Orders Page
-        </h1>
-    </main>
-    <%- include('../includes/end.ejs') %> 
+    <body>
+        <%- include('../includes/navigation.ejs') %>
+        <main>
+            <h1>Nothing there!</h1>
+        </main>
+        <%- include('../includes/end.ejs') %>
