--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -27,8 +27,10 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a class="btn" href="/products/<%= product._id %> ">Details</a>
-                                    <%- include('../includes/add-to-cart', {product: product}) %>
+                                    <a href="/products/<%= product._id %>" class="btn">Details</a>
+                                    <% if (isAuthenticated) { %>
+                                        <%- include('../includes/add-to-cart.ejs', {product: product}) %>
+                                    <% } %>
                                 </div>
                             </article>
                             <% } %>
